@@ -1,5 +1,9 @@
 2016-09-19  Edward Jones  <ed.jones@embecosm.com>
 
+	* Driver.cpp: Use -mageec-gcc to replace the original command word
+
+2016-09-19  Edward Jones  <ed.jones@embecosm.com>
+
 	* Driver.cpp: Remove -mageec-config option, and add
 	-mageec-features and -mageec-out options.
 
